vbnc/vbnc/vbnc/tests/Errors/32104.vb
Namespace Constraint1
    Class A(Of Z As {Class, Structure})

    End Class
End Namespace